# appdata

./: .clippy.toml  Cargo.toml  README.md  rustfmt.toml
docs/: README.md  README_EN.md  README_ZH.md
src/: app_data.rs  lib.rs  main.rs
